2003-10-01  Mike Kestner  <mkestner@ximian.com>

	* README.generator : updates for new parser script
	* api/Makefile.in : add gtkhtml-api.xml
	* api/*-api.xml : regenerated
	* parser/makefile : install new parsing script
	* parser/gapi-parser : new xml-driven parsing script
	* sources/makefile : call new parsing script
	* sources/gtk-sharp-sources.xml : new parser input file
	* sources/gtk-sharp.sources : killed
	
2003-09-29  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* sources/Gnome.metadata: Use const-gchar* instead of const-guchar*, 
	  when the value is realy a string
	* api/gnome-api.xml: Ditto

2003-09-28  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* sources/gtk-sharp.sources: Fixed, wrong library used for libgnomeprintui
	* api/gnome-api.xml: Ditto

2003-09-23  John Luke  <jluke@cfl.rr.com>

	* README:
	* sources/README: reflect the current targets
	
2003-09-19  Rachel Hestilow  <rachel@nullenvoid.com>

	* sources/Gtk.metadata, api/gtk-api.xml: Rename
	'Event' signals on Widget and TextTag to WidgetEvent
	and TextTag event, respectively, to avoid
	ambiguity with System.EventHandler/EventArgs.

2003-09-18  Mike Kestner  <mkestner@ximian.com>

	* configure.in : releasing 0.11

2003-09-17  Rachel Hestilow  <rachel@nullenvoid.com>

	* glib/DelegateWrapper.cs: Remove 'RemoveIfNotAlive'
	and revamp the memory management to use destroy
	notification.

	* generator/CallbackGen.cs: Do not generate the call to
	RemoveIfNotAlive.

	* gtk/GtkSharp.GtkClipboardGetFuncNative,
	GtkSharp.GtkClipboardClearFuncNative: Do not call
	RemoveIfNotAlive.

2003-09-17  Rachel Hestilow  <rachel@nullenvoid.com>

	* generator/StructBase.cs: Make pointer, wrapped,
	bitfield, and dummy fields private fields.
	
2003-09-16  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* api/gda-api.xml: Updated to reflect new versions of the targeted
	  libraries + addition of GnomePrint
	* api/gdk-api.xml: Ditto
	* api/gnome-api.xml: Ditto
	* api/gnomedb-api.xml: Ditto
	* api/gtk-api.xml: Ditto