@@ -6259,6 +6259,26 @@
     </class>
   </namespace>
   <namespace name="Gnome" library="gnomeprintui-2-2">
+    <enum name="PaperSelectorFlags" cname="GnomePaperSelectorFlags" type="enum">
+      <member cname="GNOME_PAPER_SELECTOR_MARGINS" name="Margins"/>
+      <member cname="GNOME_PAPER_SELECTOR_FEED_ORIENTATION" name="FeedOrientation"/>
+    </enum>
+    <enum name="PrintButtons" cname="GnomePrintButtons" type="enum">
+      <member cname="GNOME_PRINT_DIALOG_RESPONSE_PRINT" name="Print" value="1"/>
+      <member cname="GNOME_PRINT_DIALOG_RESPONSE_PREVIEW" name="Preview"/>
+      <member cname="GNOME_PRINT_DIALOG_RESPONSE_CANCEL" name="Cancel"/>
+    </enum>
+    <enum name="PrintDialogFlags" cname="GnomePrintDialogFlags" type="enum">
+      <member cname="GNOME_PRINT_DIALOG_RANGE" name="Range"/>
+      <member cname="GNOME_PRINT_DIALOG_COPIES" name="Copies"/>
+    </enum>
+    <enum name="PrintDialogRangeFlags" cname="GnomePrintDialogRangeFlags" type="enum">
+      <member cname="GNOME_PRINT_RANGE_CURRENT" name="Current"/>
+      <member cname="GNOME_PRINT_RANGE_ALL" name="All"/>
+      <member cname="GNOME_PRINT_RANGE_RANGE" name="Range"/>
+      <member cname="GNOME_PRINT_RANGE_SELECTION" name="Selection"/>
+      <member cname="GNOME_PRINT_RANGE_SELECTION_UNSENSITIVE" name="SelectionUnsensitive"/>
+    </enum>
     <enum name="PrintRangeType" cname="GnomePrintRangeType" type="enum">
       <member cname="GNOME_PRINT_RANGETYPE_NONE" name="None"/>
       <member cname="GNOME_PRINT_RANGETYPE_CUSTOM" name="Custom"/>
