@@ -1,3 +1,9 @@
+2003-10-02  Mike Kestner  <mkestner@ximian.com>
+
+	* api/gnome-api.xml : regenerated
+	* parser/gapi2xml.pl : handle enum <name> {...};  Thanks to
+	Martin for identifying the bug and providing a candidate patch.
+
 2003-10-01  Mike Kestner  <mkestner@ximian.com>
 
 	* README.generator : updates for new parser script
